Fixed spacing issues for log in + sign up popups

--- a/src/styles/LogIn.css
+++ b/src/styles/LogIn.css
@@ -3,8 +3,8 @@
     position: absolute;
     left: 50%;
     top: 50%;
-    margin-left: -13%;
-    margin-top: -12.5%;
+    margin-left: -220px;
+    margin-top: -240px;
     height: 480px;
     width: 440px;
     background: #FFFFFF;
